--- a/sw02_CPP_BlinkyDelayNotBlocking/sw02_CPP_BlinkyDelayNotBlocking.ioc
+++ b/sw02_CPP_BlinkyDelayNotBlocking/sw02_CPP_BlinkyDelayNotBlocking.ioc
@@ -4,6 +4,7 @@ CAD.pinconfig=
 CAD.provider=
 CortexM4.IPs=FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,RCC,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,USART3,ETH,DEBUG,USB_DEVICE_M4\:I,USB_HOST_M4\:I,PDM2PCM_M4\:I,PWR,RESMGR_UTILITY,SYS_M4\:I,CORTEX_M4\:I,OPENAMP_M4\:I,VREFBUF,GPIO
 CortexM7.IPs=FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,RCC\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,SYS\:I,USART3\:I,USB_OTG_FS\:I,ETH\:I,CORTEX_M7\:I,DEBUG\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,PDM2PCM_M7\:I,PWR\:I,RESMGR_UTILITY\:I,OPENAMP_M7\:I,VREFBUF\:I,GPIO\:I
+CortexM7.Pins=PC13,PB0,PB14,PD10,PG7,PE1
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 File.Version=6
@@ -116,30 +117,33 @@ PA9.Locked=true
 PA9.Mode=Activate_VBUS
 PA9.PinAttribute=CortexM7
 PA9.Signal=USB_OTG_FS_VBUS
+PB0.ContextOwner=CortexM7
 PB0.GPIOParameters=GPIO_Label,PinAttribute
 PB0.GPIO_Label=LD1 [Green Led]
 PB0.Locked=true
-PB0.PinAttribute=Free
+PB0.PinAttribute=CortexM7
 PB0.Signal=GPIO_Output
 PB13.GPIOParameters=PinAttribute
 PB13.Locked=true
 PB13.Mode=RMII
 PB13.PinAttribute=CortexM7
 PB13.Signal=ETH_TXD1
+PB14.ContextOwner=CortexM7
 PB14.GPIOParameters=GPIO_Label,PinAttribute
 PB14.GPIO_Label=LD3 [Red Led]
 PB14.Locked=true
-PB14.PinAttribute=Free
+PB14.PinAttribute=CortexM7
 PB14.Signal=GPIO_Output
 PC1.GPIOParameters=PinAttribute
 PC1.Locked=true
 PC1.Mode=RMII
 PC1.PinAttribute=CortexM7
 PC1.Signal=ETH_MDC
+PC13.ContextOwner=CortexM7
 PC13.GPIOParameters=GPIO_Label,PinAttribute
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.Locked=true
-PC13.PinAttribute=Free
+PC13.PinAttribute=CortexM7
 PC13.Signal=GPIO_Input
 PC14-OSC32_IN\ (OSC32_IN).GPIOParameters=PinAttribute
 PC14-OSC32_IN\ (OSC32_IN).Locked=true
@@ -161,10 +165,11 @@ PC5.Locked=true
 PC5.Mode=RMII
 PC5.PinAttribute=CortexM7
 PC5.Signal=ETH_RXD1
+PD10.ContextOwner=CortexM7
 PD10.GPIOParameters=GPIO_Label,PinAttribute
 PD10.GPIO_Label=USB_OTG_FS_PWR_EN
 PD10.Locked=true
-PD10.PinAttribute=Free
+PD10.PinAttribute=CortexM7
 PD10.Signal=GPIO_Output
 PD8.GPIOParameters=GPIO_Label,PinAttribute
 PD8.GPIO_Label=STLINK_RX
@@ -178,10 +183,11 @@ PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.PinAttribute=CortexM7
 PD9.Signal=USART3_RX
+PE1.ContextOwner=CortexM7
 PE1.GPIOParameters=GPIO_Label,PinAttribute
 PE1.GPIO_Label=LD2 [Yellow Led]
 PE1.Locked=true
-PE1.PinAttribute=Free
+PE1.PinAttribute=CortexM7
 PE1.Signal=GPIO_Output
 PG11.GPIOParameters=PinAttribute
 PG11.Locked=true
@@ -193,10 +199,11 @@ PG13.Locked=true
 PG13.Mode=RMII
 PG13.PinAttribute=CortexM7
 PG13.Signal=ETH_TXD0
+PG7.ContextOwner=CortexM7
 PG7.GPIOParameters=GPIO_Label,PinAttribute
 PG7.GPIO_Label=USB_OTG_FS_OVCR
 PG7.Locked=true
-PG7.PinAttribute=Free
+PG7.PinAttribute=CortexM7
 PG7.Signal=GPXTI7
 PH0-OSC_IN\ (PH0).GPIOParameters=PinAttribute
 PH0-OSC_IN\ (PH0).Locked=true
